Segmented SA13.12-14 and edited translations.

--- a/03_samyukta/SA_13/contents.html
+++ b/03_samyukta/SA_13/contents.html
@@ -42,17 +42,17 @@ base: ../../
     <h3>10. <a href="SA13_10.html">Requirements (2)</a> <span class="refs">(SN 45.28: <a href="https://suttacentral.net/sn45.28" target="_blank">Immersion</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b03</a>]</span></h3>
     <p class="synopsis">The Buddha explains that the first seven parts of the eightfold path are the roots and requirements of right concentration.</p>
 
-    <h3>11. <a href="SA13_11.html">The Fear of Losing Mother and Son</a> <span class="refs">(AN 3.62: <a href="https://suttacentral.net/an3.62" target="_blank">Perils </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b5</a>]</span></h3>
+    <h3>11. <a href="SA13_11.html">Fear of Losing Mother and Son</a> <span class="refs">(AN 3.62: <a href="https://suttacentral.net/an3.62" target="_blank">Perils </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b5</a>]</span></h3>
     <p class="synopsis">The Buddha describes three common fears of losing one’s mother or son during disasters, but he says those fears really come from sickness, old age, and death. The way to escaping these fears is the eightfold path.</p>
 
-    <h3>12. <a href="SA13_12.html">Three Sensations</a> <span class="refs">(SN 45.29: <a href="https://suttacentral.net/sn45.29" target="_blank">Feeling</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c17</a>]</span></h3>
+    <h3>12. <a href="SA13_12.html">Sensation</a> <span class="refs">(SN 45.29: <a href="https://suttacentral.net/sn45.29" target="_blank">Feeling</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c17</a>]</span></h3>
     <p class="synopsis">The eightfold path is the way to end the three sensations.</p>
 
-    <h3>13. <a href="SA13_13.html">Three Disagreeable Things</a> <span class="refs">(AN 10.76: <a href="https://suttacentral.net/an10.76" target="_blank">Three Things</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c27</a>]</span></h3>
+    <h3>13. <a href="SA13_13.html">Disagreeable Things</a> <span class="refs">(AN 10.76: <a href="https://suttacentral.net/an10.76" target="_blank">Three Things</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c27</a>]</span></h3>
     <p class="synopsis">The eightfold path is the way to end old age, illness, and death.</p>
 
-    <h3>14. <a href="SA13_14.html">Learners and Non-Learners</a> <span class="refs">(SN 45.13: <a href="https://suttacentral.net/sn45.13" target="_blank">A Trainee</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a14</a>]</span></h3>
-    <p class="synopsis">The terms “learner” and “non-learner” refer to disciples who are learning or have finished learning the eightfold path.</p>
+    <h3>14. <a href="SA13_14.html">Trainees and Non-Trainees</a> <span class="refs">(SN 45.13: <a href="https://suttacentral.net/sn45.13" target="_blank">A Trainee</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a14</a>]</span></h3>
+    <p class="synopsis">The terms “trainee” and “non-trainee” refer to disciples who are learning or have finished learning the eightfold path.</p>
 
     <!-- Reconstruct 761a from description at end of 761 -->
 </article>
