Segmented and edited SA 13.15-17.

--- a/03_samyukta/SA_13/contents.html
+++ b/03_samyukta/SA_13/contents.html
@@ -54,5 +54,14 @@ base: ../../
     <h3>14. <a href="SA13_14.html">Trainees and Non-Trainees</a> <span class="refs">(SN 45.13: <a href="https://suttacentral.net/sn45.13" target="_blank">A Trainee</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a14</a>]</span></h3>
     <p class="synopsis">The terms “trainee” and “non-trainee” refer to disciples who are learning or have finished learning the eightfold path.</p>
 
+    <h3>15. <a href="SA13_15.html">Correct Men and Great Men</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a22</a>]</span></h3>
+    <p class="synopsis">The terms “correct man” and “great man” refer to disciples who are learning or have finished learning the eightfold path.</p>
+
+    <h3>16. <a href="SA13_16.html">The Noble End of Contaminants</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a23</a>]</span></h3>
+    <p class="synopsis">The contaminants are ended by accomplishing the eightfold path.</p>
+
+    <h3>16. <a href="SA13_17.html">The Factors of the Noble Path</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a28</a>]</span></h3>
+    <p class="synopsis">The noble path consists of eight factors.</p>
+
     <!-- Reconstruct 761a from description at end of 761 -->
 </article>
