Segmented and edited SA 18-23.

--- a/03_samyukta/SA_13/contents.html
+++ b/03_samyukta/SA_13/contents.html
@@ -60,8 +60,24 @@ base: ../../
     <h3>16. <a href="SA13_16.html">The Noble End of Contaminants</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a23</a>]</span></h3>
     <p class="synopsis">The contaminants are ended by accomplishing the eightfold path.</p>
 
-    <h3>16. <a href="SA13_17.html">The Factors of the Noble Path</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a28</a>]</span></h3>
+    <h3>17. <a href="SA13_17.html">The Factors of the Noble Path</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a28</a>]</span></h3>
     <p class="synopsis">The noble path consists of eight factors.</p>
 
-    <!-- Reconstruct 761a from description at end of 761 -->
+    <h3>18. <a href="SA13_18.html">Cultivation of the Noble Path</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200b04</a>]</span></h3>
+    <p class="synopsis">The noble path is cultivated by relying on seclusion, having no desire, cessation, and an orientation towards renunciation.</p>
+
+    <h3>19. <a href="SA13_19.html">Past and Future Cultivation</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200b11</a>]</span></h3>
+    <p class="synopsis">A monk's past and future cultivation is by relying on seclusion, having no desire, cessation, and an orientation towards renunciation.</p>
+
+    <h3>20. <a href="SA13_20.html">Arising of the Noble Path</a> <span class="refs">(SN 45.16: <a href="https://suttacentral.net/sn45.16">Purified (1st)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200b15</a>]</span></h3>
+    <p class="synopsis">The pure, clean, and faultless accomplishment of the Noble Path only occurs when taught by a Buddha.</p>
+
+    <h3>21. <a href="SA13_21.html">Arising of the Noble Path (2)</a> <span class="refs">(SN 45.17: <a href="https://suttacentral.net/sn45.17">Purified (2nd)</a> ) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200b22</a>]</span></h3>
+    <p class="synopsis">The pure, clean, and faultless accomplishment of the Noble Path only occurs when taught by a Sugata.</p>
+
+    <h3>22. <a href="SA13_22.html">Wholesome and Unwholesome Aggregates</a> <span class="refs">(<a href="https://suttacentral.net/an5.52"><em>AN</em> 5.52</a>, <a href="https://suttacentral.net/sn47.5"><em>SN</em> 47.5</a>, and <a href="https://suttacentral.net/sn47.45"><em>SN</em> 47.45</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200b23</a>]</span></h3>
+    <p class="synopsis">The five hindrances are an unwholesome aggregate while the factors of the eightfold path are a wholesome aggregate.</p>
+
+    <h3>23. <a href="SA13_23.html">Good Friends</a> <span class="refs">(SN 45.2: <a href="https://suttacentral.net/sn45.2">Half the Spiritual Life</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200c3</a>]</span></h3>
+    <p class="synopsis">Ānanda considers that good friends are half the spiritual path. The Buddha tells him that they are the whole of the spiritual path, for it’s why he teaches the noble path to sentient beings.</p>
 </article>
