What's new item added.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,9 +6,10 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <ul style="list-style-type:none; text-indent:-90px; margin-left: 50px">
-  <li>1-Nov-2019: Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.8-10</a> have been added.</li>
-  <li>27-Oct-2019: Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.5-10</a> have been added.
-  <li>23-Oct-2019: Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.1-4</a> have been added.</li>
+  <li>5-Nov-2019: Translations of SA 13.11-23 added.
+  <li>1-Nov-2019: Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.8-10</a> added.</li>
+  <li>27-Oct-2019: Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.5-10</a> added.
+  <li>23-Oct-2019: Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.1-4</a> added.</li>
   <li>22-Oct-2019: Published table of contents for <a class="title" href="03_samyukta/contents.html">The Related Discourses</a> based on Yinshun's reconstructed version. It includes 7 parts and 51 groups of sutras.</li>
   <li>14-Oct-2019: Sutras 748-754 and 758-761 have been added to the <a class="title" href="03_samyukta\contents.html">Related Discourses</a>.</li>
   <li>11-Oct-2019: The first "official" update released. Aside from an improved web design, it includes translations of Sutra 29 of the <a class="title" href="01_dirgha\contents.html">Long Discourses</a> and Sutras 1-7 of the <a class="title" href="02_madhyama\contents.html">Medium Discourses</a>.</li>
