--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,7 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <ul style="list-style-type:none; text-indent:-90px; margin-left: 50px">
-  <li>5-Nov-2019: Translations of SA 13.11-23 added.
+  <li>5-Nov-2019: Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.11-23</a> added.
   <li>1-Nov-2019: Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.8-10</a> added.</li>
   <li>27-Oct-2019: Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.5-10</a> added.
   <li>23-Oct-2019: Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.1-4</a> added.</li>
