--- a/translations.html
+++ b/translations.html
@@ -9,7 +9,7 @@ title: Dharma Pearls | Translations
   <p>The list of texts currently slated for translation includes:</p>
   <ul>
     <li><a class="title" href="01_dirgha/contents.html">The Long Discourses</a> (Skt. <em>Dīrgha-āgama</em>)</li>
-    <li><a class="title" href="02_madhyama/contents.html">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>)</li>
+    <li><a class="title" href="02_madhyama/">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>)</li>
     <li><a class="title" href="03_samyukta/contents.html">The Related Discourses</a> (Skt. <em>Saṃyukta-āgama</em>)</li>
     <li><strong>The Numerical Discourses</strong> (Skt. <em>Ekottarika-āgama</em>)</li>
     <li><strong>Past Events</strong> (Skt. <em>Itivṛttaka</em>)</li>
