--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,7 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <ul style="list-style-type:none; text-indent:-90px; margin-left: 50px">
+  <li>19-FEB-2020: The translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">MA 72</a> added.
   <li>10-Nov-2019: Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.24-30</a> added.
   <li>5-Nov-2019: Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.15-23</a> added.
   <li>1-Nov-2019: Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.8-10</a> added.</li>
