--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -20,7 +20,7 @@ base: ../
       <br/>
     <h2>The Lesser Lands and Cities Recitation</h2>
     <h3>6. Related to Kings (continued)</h3>
-    <h3><a href="02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html">7. King Dīrghâyu</a></h3>
+    <h3><a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\index.html">7. King Dīrghâyu</a></h3>
     <h3>8. Defilement</h3>
     <h3>9. Causation</h3>
     <h3>10. Forest</h3>
