Improved What's New list styling and added links to sutras in MA's root index.

--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -12,6 +12,15 @@ base: ../
     <hr/>
     <h2>First Recitation</h2>
     <h3><a href="01_First/01_Sevens/index.html">1. The Sevens</a></h3>
+    <ul class="list-style-none">
+      <li>1. <a href="01_First/01_Sevens/MA_001.html">The Good Dharma</a></li>
+      <li>2. <a href="01_First/01_Sevens/MA_002.html">The Pārijāta Tree</a></li>
+      <li>3. <a href="01_First/01_Sevens/MA_003.html">The City Parable</a></li>
+      <li>4. <a href="01_First/01_Sevens/MA_004.html">The Water Parable</a></li>
+      <li>5. <a href="01_First/01_Sevens/MA_005.html">The Wood Pile Parable</a></li>
+      <li>6. <a href="01_First/01_Sevens/MA_006.html">The Good Person’s Departure</a></li>
+      <li>7. <a href="01_First/01_Sevens/MA_007.html">Worldly Merit</a></li>
+    </ul>
     <h3>2. Related to Action</h3>
     <h3>3. Related to Śāriputra</h3>
     <h3>4. Unprecedented Things</h3>
@@ -21,6 +30,9 @@ base: ../
     <h2>The Lesser Lands and Cities Recitation</h2>
     <h3>6. Related to Kings (continued)</h3>
     <h3><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\">7. King Dīrghâyu</a></h3>
+    <ul class="list-style-none">
+      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">72. The Legend of King Dīrghāyu</a></li>
+    </ul>
     <h3>8. Defilement</h3>
     <h3>9. Causation</h3>
     <h3>10. Forest</h3>
