--- a/translations.html
+++ b/translations.html
@@ -7,7 +7,7 @@ title: Dharma Pearls | Translations
   <h1>Current Translation Projects</h1>
   <p>The first long-term goal of <em>Dharma Pearls</em> is to produce English translations of the four Chinese Āgama collections and select early Buddhist texts like the Chinese Dharmapāda from the <em>Taisho</em> canon.</p>
   <p>The list of texts currently slated for translation includes:</p>
-  <ul>
+  <ul class="list-style-disc">
     <li><a class="title" href="01_dirgha/">The Long Discourses</a> (Skt. <em>Dīrgha-āgama</em>)</li>
     <li><a class="title" href="02_madhyama/">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>)</li>
     <li><a class="title" href="03_samyukta/contents.html">The Related Discourses</a> (Skt. <em>Saṃyukta-āgama</em>)</li>
