--- a/whats-new.html
+++ b/whats-new.html
@@ -6,8 +6,10 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <dl class="whats-new">
+  <dt>24-Feb-2020</dt>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">MA 73</a> added.</dd>
   <dt>19-Feb-2020</dt>
-  <dd>The translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">MA 72</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">MA 72</a> added.</dd>
   <dt>10-Nov-2019</dt>
   <dd>Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.24-30</a> added.</dd>
   <dt>5-Nov-2019</dt>
