Added translation of MA 75.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
@@ -20,4 +20,7 @@ base: ../../../
 
 <h3>74. <a href="MA_074.html">Eight Thoughts</a> <span class="refs">(AN 8.30: <a href="https://suttacentral.net/an8.30" target="_blank">Anuruddha and the Great Thoughts</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0540" target="_blank">T 26.540c19</a>]</span></h3>
 <p class="synopsis">Aniruddha has seven thoughts about how the path is obtained, and the Buddha visits him about it. Praising him, the Buddha suggests adding an eighth thought, and later he gives a discourse on the subject. Aniruddha becomes an arhat shortly thereafter.</p>
+
+<h3>75. <a href="MA_075.html">The Pure Way to the Imperturbable</a> <span class="refs">(MN 106: <a href="https://suttacentral.net/mn106" target="_blank">Conducive to the Imperturbable</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0542" target="_blank">T 26.542b4</a>]</span></h3>
+<p class="synopsis">The Buddha explains the different mental orientations that lead to rebirth in the formless heavens, and how they differ from the orientation that leads to Nirvāṇa.</p>
 </article>
