--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -34,6 +34,7 @@ base: ../
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">72. The Legend of King Dīrghāyu</a></li>
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">73. The Gods</a></li>
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">74. Eight Thoughts</a></li>
+      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">75. The Pure Path to the Imperturbable</a></li>
     </ul>
     <h3>8. Defilement</h3>
     <h3>9. Causation</h3>
