Added numbering and ids to paras in MA 75. Implemented scroll padding to offset anchors beneath the header. Fixed anchors and links in MA 1-3.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
@@ -22,5 +22,5 @@ base: ../../../
 <p class="synopsis">Aniruddha has seven thoughts about how the path is obtained, and the Buddha visits him about it. Praising him, the Buddha suggests adding an eighth thought, and later he gives a discourse on the subject. Aniruddha becomes an arhat shortly thereafter.</p>
 
 <h3>75. <a href="MA_075.html">The Pure Way to the Imperturbable</a> <span class="refs">(MN 106: <a href="https://suttacentral.net/mn106" target="_blank">Conducive to the Imperturbable</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0542" target="_blank">T 26.542b4</a>]</span></h3>
-<p class="synopsis">The Buddha explains the different mental orientations that lead to rebirth in the formless heavens, and how they differ from the orientation that leads to Nirvāṇa.</p>
+<p class="synopsis">The Buddha explains the different mental orientations that lead to rebirth in the form and formless heavens, and how they differ from the orientation that leads to Nirvāṇa.</p>
 </article>
