Added translation of MA 76, beginning of a proper names index, and other misc. corrections.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <dl class="whats-new">
+  <dt>7-Mar-2020</dt>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">MA 76</a> added.</dd>
   <dt>4-Mar-2020</dt>
   <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">MA 75</a> added.</dd>
   <dt>29-Feb-2020</dt>
