Began work on an index of parallels with MA. Misc. corrections.

--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -8,21 +8,49 @@ base: ../
     <h1>The Medium Discourses</h1>
     <h4>(Skt. Madhyama Āgama; Ch. <span class="ch">中阿含經</span>)</h4>
     <p><em>The Medium Disources</em> was translated twice to Chinese; the second translation is the one that survives today. Completed in the late 4th century CE, it appears to represent the <a href="https://en.wikipedia.org/wiki/Sarvastivada" target="_blank">Sarvâstivāda</a> version of the collection. The Pali equivalent is the <em>Majjhima Nikāya</em>, but the two collections differ somewhat in both their arrangement and the texts chosen. With a total 212 sutras, <em>the Medium Discourses</em> contains many texts that appear in the Pali <em>Aṅguttara Nikāya</em> and some that don't appear to exist in Pali. The collection is divided into five recitations and 18 thematic chapters.</p>
-    <p>Below is a list of the chapters of the The Medium Discourses. Those with links have translations available.</p>
+    <p>Below is a list of the chapters of the <em>The Medium Discourses</em>. Those with links have translations available.</p>
     <hr/>
     <h2>First Recitation</h2>
     <h3><a href="01_First/01_Sevens/index.html">1. The Sevens</a></h3>
     <ul class="list-style-none">
-      <li>1. <a href="01_First/01_Sevens/MA_001.html">The Good Dharma</a></li>
-      <li>2. <a href="01_First/01_Sevens/MA_002.html">The Pārijāta Tree</a></li>
-      <li>3. <a href="01_First/01_Sevens/MA_003.html">The City Parable</a></li>
-      <li>4. <a href="01_First/01_Sevens/MA_004.html">The Water Parable</a></li>
-      <li>5. <a href="01_First/01_Sevens/MA_005.html">The Wood Pile Parable</a></li>
-      <li>6. <a href="01_First/01_Sevens/MA_006.html">The Good Person’s Departure</a></li>
-      <li>7. <a href="01_First/01_Sevens/MA_007.html">Worldly Merit</a></li>
+      <li><a href="01_First/01_Sevens/MA_001.html">1. The Good Dharma</a></li>
+      <li><a href="01_First/01_Sevens/MA_002.html">2. The Pārijāta Tree</a></li>
+      <li><a href="01_First/01_Sevens/MA_003.html">3. The City Parable</a></li>
+      <li><a href="01_First/01_Sevens/MA_004.html">4. The Water Parable</a></li>
+      <li><a href="01_First/01_Sevens/MA_005.html">5. The Wood Pile Parable</a></li>
+      <li><a href="01_First/01_Sevens/MA_006.html">6. The Good Person’s Departure</a></li>
+      <li><a href="01_First/01_Sevens/MA_007.html">7. Worldly Merit</a></li>
+      <li>8. Seven Suns</li>
+      <li>9. Seven Chariots</li>
+      <li>10. The End of the Contaminants</li>
     </ul>
     <h3>2. Related to Action</h3>
+    <ul class="list-style-none">
+      <li>11. The Salt Rock Parable</li>
+      <li>12. [Vappa]</li>
+      <li>13. Liberation</li>
+      <li>14. Rāhula</li>
+      <li>15. Intention</li>
+      <li>16. [Kālāmā]</li>
+      <li>17. Gamini</li>
+      <li>18. Lion</li>
+      <li>19. Nirgrantha</li>
+      <li>20. [Pāṭali]</li>
+    </ul>
     <h3>3. Related to Śāriputra</h3>
+    <ul class="list-style-none">
+      <li>21. Equanimity</li>
+      <li>22. Accomplishing the Precepts</li>
+      <li>23. Knowledge</li>
+      <li>24. The Lion's Roar</li>
+      <li>25. The Water Parable</li>
+      <li>26. Gamini's Teacher</li>
+      <li>27. Brahmin [Dhānañjani]</li>
+      <li>28. Educating the Ill</li>
+      <li>29. Mahākauṣṭhila</li>
+      <li>30. The Elephant Footprint Parable</li>
+      <li>31. Discerning the Noble Truths</li>
+    </ul>
     <h3>4. Unprecedented Things</h3>
     <h3>5. Related to Training</h3>
     <h3>6. Related to Kings</h3>
@@ -35,7 +63,7 @@ base: ../
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">73. The Gods</a></li>
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">74. Eight Thoughts</a></li>
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">75. The Pure Path to the Imperturbable</a></li>
-      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">76. [Ugracelā]</li>
+      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">76. [Ugracelā]</a></li>
     </ul>
     <h3>8. Defilement</h3>
     <h3>9. Causation</h3>
