--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -44,7 +44,7 @@ base: ../
       <li>23. Knowledge</li>
       <li>24. The Lion's Roar</li>
       <li>25. The Water Parable</li>
-      <li>26. Gamini's Teacher</li>
+      <li>26. [Gulissāni]</li>
       <li>27. Brahmin [Dhānañjani]</li>
       <li>28. Educating the Ill</li>
       <li>29. Mahākauṣṭhila</li>
