Translation of MA 77 added and other misc corrections.

--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -10,6 +10,7 @@ base: ../
     <p><em>The Medium Disources</em> was translated twice to Chinese; the second translation is the one that survives today. Completed in the late 4th century CE, it appears to represent the <a href="https://en.wikipedia.org/wiki/Sarvastivada" target="_blank">Sarvâstivāda</a> version of the collection. The Pali equivalent is the <em>Majjhima Nikāya</em>, but the two collections differ somewhat in both their arrangement and the texts chosen. With a total 212 sutras, <em>the Medium Discourses</em> contains many texts that appear in the Pali <em>Aṅguttara Nikāya</em> and some that don't appear to exist in Pali. The collection is divided into five recitations and 18 thematic chapters.</p>
     <p>Below is a list of the chapters of the <em>The Medium Discourses</em>. Those with links have translations available.</p>
     <hr/>
+<div class="madNdx">
     <h2>First Recitation</h2>
     <h3><a href="01_First/01_Sevens/index.html">1. The Sevens</a></h3>
     <ul class="list-style-none">
@@ -20,11 +21,13 @@ base: ../
       <li><a href="01_First/01_Sevens/MA_005.html">5. The Wood Pile Parable</a></li>
       <li><a href="01_First/01_Sevens/MA_006.html">6. The Good Person’s Departure</a></li>
       <li><a href="01_First/01_Sevens/MA_007.html">7. Worldly Merit</a></li>
-      <li>8. Seven Suns</li>
+<!--  <li>8. Seven Suns</li>
       <li>9. Seven Chariots</li>
-      <li>10. The End of the Contaminants</li>
+      <li>10. The End of the Contaminants</li> -->
     </ul>
+<!--
     <h3>2. Related to Action</h3>
+
     <ul class="list-style-none">
       <li>11. The Salt Rock Parable</li>
       <li>12. [Vappa]</li>
@@ -37,6 +40,7 @@ base: ../
       <li>19. Nirgrantha</li>
       <li>20. [Pāṭali]</li>
     </ul>
+
     <h3>3. Related to Śāriputra</h3>
     <ul class="list-style-none">
       <li>21. Equanimity</li>
@@ -55,8 +59,9 @@ base: ../
     <h3>5. Related to Training</h3>
     <h3>6. Related to Kings</h3>
       <br/>
+-->
     <h2>The Lesser Lands and Cities Recitation</h2>
-    <h3>6. Related to Kings (continued)</h3>
+<!--<h3>6. Related to Kings (continued)</h3> -->
     <h3><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\">7. King Dīrghâyu</a></h3>
     <ul class="list-style-none">
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">72. The Legend of King Dīrghāyu</a></li>
@@ -64,7 +69,9 @@ base: ../
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">74. Eight Thoughts</a></li>
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">75. The Pure Path to the Imperturbable</a></li>
       <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">76. [Ugracelā]</a></li>
+      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_077.html">77. The Three Clansmen of Sāketa</a></li>
     </ul>
+<!--
     <h3>8. Defilement</h3>
     <h3>9. Causation</h3>
     <h3>10. Forest</h3>
@@ -83,4 +90,6 @@ base: ../
     <h3>16. Great (2)</h3>
     <h3>17. [Potaliya]</h3>
     <h3>18. Illustrations</h3>
+-->
+</div>
 </article>
