--- a/03_samyukta/SA_07/index.html
+++ b/03_samyukta/SA_07/index.html
@@ -9,7 +9,7 @@ next: ../SA_12/index.html
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
     <h2>7. Abodes of Mindfulness <span class="refs">(cf. <em>SN</em> 47: Satipaṭṭhāna saṃyutta)</span></h2>
-    <p>This group of sutras has the common theme of describing ...</p>
+    <!--<p>This group of sutras has the common theme of describing ...</p>-->
     <p>The Abodes of Mindfulness group consists of 54 sutras when abbreviated sutra variants are counted. The material is found in fascicle 24 of <em>Taisho</em> No. 99. Below is a list of the English translations currently available.</p>
     <p>Note: Previous English translations currently available at <a href="https://suttacentral.net/" target="_blank">SuttaCentral</a> are referenced below. The reader should be aware that titles for <em>SA</em> sutras are supplied by the translator(s). The sutra numbering follows Yinshun’s reconstruction. The <em>Taisho</em> sutra numbers are noted for reference ("[T 99.xxx]").</p>
 <div class="samNdx">
