--- a/03_samyukta/SA_11/index.html
+++ b/03_samyukta/SA_11/index.html
@@ -7,7 +7,7 @@ base: ../../
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
     <h2>11. Powers</h2>
-    <p>This group of sutras has the common theme of describing ...</p>
+    <!--<p>This group of sutras has the common theme of describing ...</p>-->
     <p>The Powers group consists of 60 sutras when abbreviated sutra variants are counted. The material is found in fascicle 26 of <em>Taisho</em> No. 99. Below is a list of the English translations currently available.</p>
     <p>Note: Previous English translations currently available at <a href="https://suttacentral.net/" target="_blank">SuttaCentral</a> are referenced below. The reader should be aware that titles for <em>SA</em> sutras are supplied by the translator(s). The sutra numbering follows Yinshun’s reconstruction. The <em>Taisho</em> sutra numbers are noted for reference ("[T 99.xxx]").</p>
 <div class="samNdx">
