--- a/whats-new.html
+++ b/whats-new.html
@@ -6,26 +6,28 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <dl class="whats-new">
+  <dt>30-Mar-2020</dt>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_077.html">MĀ 77</a> added.</dd>
   <dt>7-Mar-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">MA 76</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">MĀ 76</a> added.</dd>
   <dt>4-Mar-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">MA 75</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">MĀ 75</a> added.</dd>
   <dt>29-Feb-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">MA 74</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">MĀ 74</a> added.</dd>
   <dt>24-Feb-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">MA 73</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">MĀ 73</a> added.</dd>
   <dt>19-Feb-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">MA 72</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">MĀ 72</a> added.</dd>
   <dt>10-Nov-2019</dt>
-  <dd>Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.24-30</a> added.</dd>
+  <dd>Translations of <a href="03_samyukta\SA_13\contents.html">SĀ 13.24-30</a> added.</dd>
   <dt>5-Nov-2019</dt>
-  <dd>Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.15-23</a> added.</dd>
+  <dd>Translations of <a href="03_samyukta\SA_13\contents.html">SĀ 13.15-23</a> added.</dd>
   <dt>1-Nov-2019</dt>
-  <dd>Translations of <a href="03_samyukta\SA_13\contents.html">SA 13.8-10</a> added.</dd>
+  <dd>Translations of <a href="03_samyukta\SA_13\contents.html">SĀ 13.8-10</a> added.</dd>
   <dt>27-Oct-2019</dt>
-  <dd>Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.5-10</a> added.</dd>
+  <dd>Translations of <a href="03_samyukta\SA_01\contents.html">SĀ 1.5-10</a> added.</dd>
   <dt>23-Oct-2019</dt>
-  <dd>Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.1-4</a> added.</dd>
+  <dd>Translations of <a href="03_samyukta\SA_01\contents.html">SĀ 1.1-4</a> added.</dd>
   <dt>22-Oct-2019</dt>
   <dd>Published table of contents for <a class="title" href="03_samyukta/contents.html">The Related Discourses</a> based on Yinshun's reconstructed version. It includes 7 parts and 51 groups of sutras.</dd>
   <dt>14-Oct-2019</dt>
