Edited MA 1, added classes to .md footers.

--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -11,20 +11,26 @@ base: ../
     <p>Below is a list of the chapters of the <em>The Medium Discourses</em>. Those with links have translations available.</p>
     <hr/>
 <div class="madNdx">
-    <h2>First Recitation</h2>
-    <h3><a href="01_First/01_Sevens/index.html">1. The Sevens</a></h3>
-    <ol start="1">
-      <li><a href="01_First/01_Sevens/MA_001.html">The Good Dharma</a></li>
-      <li><a href="01_First/01_Sevens/MA_002.html">The Pārijāta Tree</a></li>
-      <li><a href="01_First/01_Sevens/MA_003.html">The City Parable</a></li>
-      <li><a href="01_First/01_Sevens/MA_004.html">The Water Parable</a></li>
-      <li><a href="01_First/01_Sevens/MA_005.html">The Wood Pile Parable</a></li>
-      <li><a href="01_First/01_Sevens/MA_006.html">The Good Person’s Departure</a></li>
-      <li><a href="01_First/01_Sevens/MA_007.html">Worldly Merit</a></li>
-<!--  <li>8. Seven Suns</li>
-      <li>9. Seven Chariots</li>
-      <li>10. The End of the Contaminants</li> -->
-    </ol>
+    <ul class="list-style-none">
+      <li>I. First Recitation
+        <ol start="1">
+          <li><a href="01_First/01_Sevens/index.html">The Sevens</a>
+            <ol start="1">
+              <li><a href="01_First/01_Sevens/MA_001.html">The Good Dharma</a></li>
+              <li><a href="01_First/01_Sevens/MA_002.html">The Pārijāta Tree</a></li>
+              <li><a href="01_First/01_Sevens/MA_003.html">The City Parable</a></li>
+              <li><a href="01_First/01_Sevens/MA_004.html">The Water Parable</a></li>
+              <li><a href="01_First/01_Sevens/MA_005.html">The Wood Pile Parable</a></li>
+              <li><a href="01_First/01_Sevens/MA_006.html">The Good Person’s Departure</a></li>
+              <li><a href="01_First/01_Sevens/MA_007.html">Worldly Merit</a></li>
+              <!--  <li>8. Seven Suns</li>
+              <li>9. Seven Chariots</li>
+              <li>10. The End of the Contaminants</li> -->
+            </ol>
+          </li>
+        </ol>
+      </li>
+    </ul>
 <!--
     <h3>2. Related to Action</h3>
 
@@ -60,17 +66,23 @@ base: ../
     <h3>6. Related to Kings</h3>
       <br/>
 -->
-    <h2>The Lesser Lands and Cities Recitation</h2>
+    <ul class="list-style-none">
+      <li>II. The Lesser Lands and Cities Recitation
 <!--<h3>6. Related to Kings (continued)</h3> -->
-    <h3><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\">7. King Dīrghâyu</a></h3>
-    <ol start="72">
-      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">The Legend of King Dīrghāyu</a></li>
-      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">The Gods</a></li>
-      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">Eight Thoughts</a></li>
-      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">The Pure Path to the Imperturbable</a></li>
-      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">[Ugracelā]</a></li>
-      <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_077.html">The Three Clansmen of Sāketa</a></li>
-    </ol>
+        <ol start="7">
+          <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\">King Dīrghâyu</a>
+            <ol start="72">
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">The Legend of King Dīrghāyu</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">The Gods</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">Eight Thoughts</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">The Pure Path to the Imperturbable</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">[Ugracelā]</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_077.html">The Three Clansmen of Sāketa</a></li>
+            </ol>
+          </li>
+        </ol>
+      </li>
+    </ul>
 <!--
     <h3>8. Defilement</h3>
     <h3>9. Causation</h3>
