Slight style change for What's New page, added translation of MA 78.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
@@ -29,5 +29,8 @@ base: ../../../
 
 <h3>77. <a href="MA_077.html">The Three Clansmen of Sāketa</a> <span class="refs">(MN 68: <a href="https://suttacentral.net/mn68" target="_blank">At Naḷakapāna</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0544" target="_blank">T 26.544b22</a>]</span></h3>
 <p class="synopsis">The Buddha checks how Aniruddha, Nandika, and Kimbila are doing shortly after they had become monks. When Aniruddha reports they are happy, the Buddha gives them a sermon, which includes an explanation of why he relates the rebirth of disciples after they die.</p>
+
+<h3>78. <a href="MA_078.html">Brahmā Invites the Buddha</a> <span class="refs">(MN 49: <a href="https://suttacentral.net/mn49" target="_blank">On the Invitation of Brahmā</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0547" target="_blank">T 26.547a11</a>]</span></h3>
+<p class="synopsis">When Brahmā forms the wrong view that his heaven is the ultimate escape from suffering, the Buddha pays him a visit to correct this mistake. Māra Pāpīyān appears twice to try to derail the conversation between them.</p>
 <hr/>
 </article>
