--- a/whats-new.html
+++ b/whats-new.html
@@ -6,18 +6,20 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <dl class="whats-new">
+  <dt>8-Apr-2020</dt>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_078.html">MĀ 78 Brahmā’s Invitation to the Buddha</a> added.</dd>
   <dt>30-Mar-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_077.html">MĀ 77</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_077.html">MĀ 77 The Three Clansmen of Sāketa</a> added.</dd>
   <dt>7-Mar-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">MĀ 76</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">MĀ 76 [Ugracelā]</a> added.</dd>
   <dt>4-Mar-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">MĀ 75</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_075.html">MĀ 75 The Pure Way to the Imperturbable</a> added.</dd>
   <dt>29-Feb-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">MĀ 74</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_074.html">MĀ 74 Eight Thoughts</a> added.</dd>
   <dt>24-Feb-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">MĀ 73</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_073.html">MĀ 73 The Gods</a> added.</dd>
   <dt>19-Feb-2020</dt>
-  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">MĀ 72</a> added.</dd>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_072.html">MĀ 72 The Legend of King Dīrghāyu</a> added.</dd>
   <dt>10-Nov-2019</dt>
   <dd>Translations of <a href="03_samyukta\SA_13\contents.html">SĀ 13.24-30</a> added.</dd>
   <dt>5-Nov-2019</dt>
