Added MA 79 translation.

--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -79,6 +79,7 @@ base: ../
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_076.html">[Ugracelā]</a></li>
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_077.html">The Three Clansmen of Sāketa</a></li>
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_078.html">Brahmā Invites the Buddha</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_079.html">The Greater Gods</a></li>
             </ol>
           </li>
         </ol>
