--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <dl class="whats-new">
+  <dt>7-May-2020</dt>
+  <dd>Translation of <a href="02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.html">MĀ 80 The Rough Cloth</a> added.</dd>
   <dt>25-April-2020</dt>
   <dd>Translations added:</dd>
   <dd><a href="02_madhyama\01_First\05_Related_To_Cultivation\MA_042.html">MĀ 42 What Purpose</a></dd>
