Discourses isn't spelled discources.

--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -7,7 +7,7 @@ base: ../
 <article class="home">
     <h1>The Medium Discourses</h1>
     <h4>(Skt. Madhyama Āgama; Ch. <span class="ch">中阿含經</span>)</h4>
-    <p>The <em>Medium Discources</em> was translated twice to Chinese; the second translation is the one that survives today. Completed in the late 4th century CE, it appears to represent the <a href="https://en.wikipedia.org/wiki/Sarvastivada" target="_blank">Sarvâstivāda</a> version of the collection. The Pali equivalent is the <em>Majjhima Nikāya</em>, but the two collections differ somewhat in both their arrangement and the texts chosen. With a total 212 sutras, <em>the Medium Discourses</em> contains many texts that appear in the Pali <em>Aṅguttara Nikāya</em> and some that don't appear to exist in Pali. The collection is divided into five recitations and 18 thematic chapters.</p>
+    <p>The <em>Medium Discourses</em> was translated twice to Chinese; the second translation is the one that survives today. Completed in the late 4th century CE, it appears to represent the <a href="https://en.wikipedia.org/wiki/Sarvastivada" target="_blank">Sarvâstivāda</a> version of the collection. The Pali equivalent is the <em>Majjhima Nikāya</em>, but the two collections differ somewhat in both their arrangement and the texts chosen. With a total 212 sutras, <em>the Medium Discourses</em> contains many texts that appear in the Pali <em>Aṅguttara Nikāya</em> and some that don't appear to exist in Pali. The collection is divided into five recitations and 18 thematic chapters.</p>
     <p>Below is a list of the chapters of the <em>The Medium Discourses</em>. Those with links have translations available.</p>
     <hr/>
 <div class="madNdx">
