Added MA 81 translation.

--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -96,6 +96,7 @@ base: ../
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_078.html">Brahmā Invites the Buddha</a></li>
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_079.html">The Greater Gods</a></li>
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.html">The Rough Cloth</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_081.html"> Mindfulness of Body</a></li>
             </ol>
           </li>
         </ol>
